[Multi-stage] Clean up RelNode to Operator handling (#13325)